--- a/styles.css
+++ b/styles.css
@@ -13,21 +13,29 @@ html, body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding-top: 75px;
+    flex-wrap:wrap;
 }
 .container{
     display: grid;
     background-color: aqua;
     border: 2px solid black;
-    grid-template-columns: repeat(3, minmax(20px, 200px));
-    grid-template-rows: repeat(3, minmax(20px, 200px));
+    width: 800px;
+    height: 800px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
 }
 
 .control{
+    display: flex;
     border: 2px solid black;
     padding: 20px;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 50px;
 }
 .cell{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     text-align: center;
 }
 .header{
